Wed Dec 15  2:18:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/UnixFileHandle.m: Chck to see if we are given a bad address.
	* Source/NSHost.m: major rewrite

Tue Dec 14  8:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSTimeZone.m: ([+getTimeZoneFile:]) Removed misleading comment
	and hack.
	([+timeZoneWithName:]) Fixed bug in loading timezone data file (unusual
	formats could cause a crash).
	* Source/NSScanner.m: ([-initWithString:]) fix to handle being passed
	a nil string (use an empty string and log an error).
	* NSTimeZones/NSTimeZones.tar: updated to latest info and made sure
	files are in the correct place.

Mon Dec 13 13:31:00 1999  Chris Ball <cball@fmco.com>

	* Source/NSTimeZone.m: Replaced the original, correct comment and
		removed Richard's replacement incorrect comment.

Fri Dec  9 17:00:00 1999  Chris Ball <cball@fmco.com>

	Sorry, I did a commit one directory to deep.
	* Source/NSArray.m: NSMutableArray's compared against a garbage pointer
		on removal.  This causes real problems on SMP machines.
	* Source/NSGarray.m
	* Source/NSCalendarDate.m: DateByAddingYears lost timeZone info.
		InitWithString didn't deal with adjacent format specifiers.
	* Source/NSDate.m: addTimeInterval messed up timeZone if used with
		calendarDate
	* Source/NSLock.m: Trylock was broken and lockBeforeDate was 
		unimplemented
	* Source/NSObject.m: The release code was broken for SMP machine use.
	* Source/NSTimeZone.m: The GMT+-** files are in the root directory on
		OpenStep and are in Etc/ on GNUstep so check both.

Mon Dec 13 12:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Fixes for cball's changes (who is cball?, and why didn't s/he produce
	a ChangeLog entry or conform to GNU indentation?  It took me hours to
	tidy this up).
	* Source/NSDate.m: ([NSGDate -addTimeInterval:]) removed bogus
	implementation of method (inherits from NSDate).